# cstruct2

./: .gitignore  CHANGELOG  LICENSE  README.md  TODO  build.sh  publish.sh  pyproject.toml
src/: make.sh  read_test.py  read_test_generator.c  socks5-server.py  write_test.py
src/cstruct2/: __init__.py  cstruct2.py  cstruct2_exceptions.py  cstruct2_fields.py  cstruct2_utils.py  decorator.py
