[project]
name = "cstruct2"
version = "0.0.1"
authors = [
  { name = "Emil Arner", email = "arner@usa.com" },
]

description = "A library for handling C-style packed binary structures easily."
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
